Use local forks of cider, clj-refactor, clojure-mode
CIDER: for stability, they are deprecated functions I depended on
clj-refactor: simlply for allowing the CIDER fork, since it had a package-require
clojure-mode: for 	https://github.com/clojure-emacs/clojure-mode/pull/466

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,12 @@
 [submodule "lib/es-windows"]
 	path = lib/es-windows
 	url = https://github.com/sabof/es-windows.git
+[submodule "lib/cider"]
+	path = lib/cider
+	url = https://github.com/clojure-emacs/cider.git
+[submodule "lib/clojure-mode"]
+	path = lib/clojure-mode
+	url = https://github.com/vemv/clojure-mode.git
+[submodule "lib/clj-refactor"]
+	path = lib/clj-refactor
+	url = https://github.com/vemv/clj-refactor.el.git
