Use helm libs as submodules
This commit seems to break helm-related shortcuts: https://github.com/emacs-helm/helm/commit/25538d6ff95c2a82a6d47fcf82d946ae02c10494

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@
 [submodule "lib/helm-ag"]
 	path = lib/helm-ag
 	url = https://github.com/zenmacs/helm-ag.git
+[submodule "lib/helm"]
+	path = lib/helm
+	url = https://github.com/emacs-helm/helm.git
+[submodule "lib/helm-projectile"]
+	path = lib/helm-projectile
+	url = https://github.com/bbatsov/helm-projectile.git
