--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "lib/helm-projectile"]
 	path = lib/helm-projectile
 	url = https://github.com/bbatsov/helm-projectile.git
+[submodule "lib/sesman"]
+	path = lib/sesman
+	url = git@github.com:vspinu/sesman.git
