--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,12 @@
 [submodule "lib/company-mode"]
 	path = lib/company-mode
 	url = git@github.com:company-mode/company-mode.git
+[submodule "lib/robe"]
+	path = lib/robe
+	url = git@github.com:dgutov/robe.git
+[submodule "lib/smartparens"]
+	path = lib/smartparens
+	url = git@github.com:Fuco1/smartparens.git
+[submodule "lib/term-title"]
+	path = lib/term-title
+	url = git@github.com:CyberShadow/term-title.git
